# Q-BEATS

./: .gitignore  app.json  context-qbeats.md  implementation_plan.md  package-lock.json  package.json  tmp_fix.ps1
.github/workflows/: f1_build_check.yml  ios_build.yml
Vendors/AbletonLink/LinkKit.xcframework/: Info.plist
core_engine/: CMakeLists.txt  MIDISequencer.cpp  MIDISequencer.h  MIDITypes.h  MetronomeBridge.h  MetronomeBridge.mm  MetronomeDSP.cpp  MetronomeDSP.h  test_main.cpp
core_engine/tests/: test_midi_sequencer.cpp
ios_app/: project.yml
ios_app/LiveHost/Bridge/: AudioEngineBridge.h  AudioEngineBridge.mm
ios_app/LiveHost/UI/: ContentView.swift  LiveHostApp.swift
ios_app/QBeats/: AppDelegate.swift  AppSettings.swift  AudioEngine.swift  BTMIDICentralPickerView.swift  ContentView.swift  DebugView.swift  Info.plist  LinkEngine.h  LinkEngine.mm  LinkSettingsPresenter.h  LinkSettingsPresenter.mm  LinkSettingsUIView.swift  MIDIDebugViewModel.swift  MIDIEngine.mm  MIDIEngineBridge.h  MIDINetworkViewModel.swift  MetronomeDSPBridge.h  MetronomeDSPBridge.mm  QBeats-Bridging-Header.h  QBeats.entitlements  QBeatsApp.swift  SettingsView.swift
ios_app/QBeats/Models/: PreviewData.swift  Section.swift  Setlist.swift  Song.swift  TimeSignature.swift
ios_app/QBeats/Store/: QBeatsStore.swift
modules/qbeats-metronome/: expo-module.config.json  index.ts
modules/qbeats-metronome/android/: build.gradle
modules/qbeats-metronome/ios/: MetronomeDSP.cpp  MetronomeDSP.h  MetronomeDSPBridge.h  QbeatsMetronome.podspec  QbeatsMetronomeModule.swift  (+1 more)
(+7 files in other folders)
